--- a/jogos.html
+++ b/jogos.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <title>TecBlog - Jogos</title>
-
+        <!-- GOOGLE FONTS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;1,200;1,400&display=swap" rel="stylesheet">
+        <!-- GOOGLE FONTS -->
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
